--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             font-weight: bold;
         }
     </style>
-    <script defer src="script.js"></script>
+<script src="script.js"></script>
 </head>
 <body>
     <div class="container">
