--- a/index.html
+++ b/index.html
@@ -4,67 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gender Reveal</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f4f4f9;
+            font-family: 'Nunito', sans-serif;
+            background-color: #f0f0f0;
         }
-        .container {
+
+        #revealContainer {
             text-align: center;
             background-color: white;
             border-radius: 20px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            box-shadow: 0px 4px 15px rgba(0,0,0,0.1);
             padding: 40px;
-            width: 350px;
+            transition: all 0.5s ease;
         }
-        .question {
-            font-size: 1.8em;
-            margin-bottom: 20px;
-        }
-        .buttons {
-            display: flex;
-            justify-content: space-around;
-            margin-top: 20px;
-        }
-        button {
-            padding: 10px 20px;
-            font-size: 1.2em;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
+
+        #revealButton {
+            background-color: #ff6b6b;
             color: white;
-            transition: transform 0.2s;
-        }
-        .boy {
-            background-color: #4dabf7;
-        }
-        .girl {
-            background-color: #ff6b81;
-        }
-        button:hover {
-            transform: scale(1.1);
-        }
-        .results {
-            margin-top: 20px;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 30px;
             font-size: 1.2em;
-            font-weight: bold;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        #revealButton:hover {
+            background-color: #ff4d4d;
+        }
+
+        #message {
+            display: none;
+            font-size: 2em;
+            margin-top: 20px;
+            color: #ff6b6b;
         }
     </style>
-<script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="question">Is it a Boy or a Girl?</div>
-        <div class="buttons">
-            <button class="boy" onclick="vote('boy')">Boy 💙</button>
-            <button class="girl" onclick="vote('girl')">Girl 💖</button>
-        </div>
-        <div class="results" id="results">Loading results...</div>
+    <div id="revealContainer">
+        <button id="revealButton" onclick="revealGender()">Reveal the Gender!</button>
+        <div id="message">It's a Girl! 🎀</div>
     </div>
+
+    <script>
+        function revealGender() {
+            document.getElementById('revealButton').style.display = 'none';
+            document.getElementById('message').style.display = 'block';
+            confetti({
+                particleCount: 200,
+                spread: 70,
+                origin: { y: 0.6 },
+                colors: ['#ff6b6b', '#ffc0cb']
+            });
+        }
+    </script>
 </body>
 </html>
