--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gender Reveal</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <style>
         body {
             display: flex;
@@ -14,6 +15,7 @@
             margin: 0;
             font-family: 'Nunito', sans-serif;
             background-color: #f0f0f0;
+            background: linear-gradient(to right, #6ba8ff, #ffc0cb);
         }
 
         #revealContainer {
@@ -34,6 +36,7 @@
             font-size: 1.2em;
             cursor: pointer;
             transition: background-color 0.3s;
+            margin-top: 20px;
         }
 
         #revealButton:hover {
@@ -43,81 +46,49 @@
         #message {
             display: none;
             font-size: 3em;
-            color: #555;
-
-            font-size: 2em;
             margin-top: 20px;
             color: #ff6b6b;
         }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 </head>
-<body style="background: linear-gradient(to right, #6ba8ff, #ffc0cb);">
+<body>
     <div id="revealContainer">
         <h1 style="color: #555; margin-bottom: 20px;">Boy or Girl?</h1>
-        <div style="display: flex; justify-content: space-around; margin-bottom: 20px;">
-            <div style="text-align: center;">
-                <img src="https://cdn.pixabay.com/photo/2017/01/31/13/14/baby-boy-2027620_960_720.png" alt="Boy" style="width: 80px; margin-bottom: 10px;">
-                <div style="background-color: #6ba8ff; padding: 10px 20px; border-radius: 15px; color: white; font-size: 1.2em;">Boy</div>
-            </div>
-            <div style="text-align: center;">
-                <img src="https://cdn.pixabay.com/photo/2017/01/31/13/14/baby-girl-2027621_960_720.png" alt="Girl" style="width: 80px; margin-bottom: 10px;">
-                <div style="background-color: #ffc0cb; padding: 10px 20px; border-radius: 15px; color: white; font-size: 1.2em;">Girl</div>
-            </div>
-        </div>
-            <div style="background-color: #6ba8ff; padding: 20px; border-radius: 15px; color: white; font-size: 1.2em;">Boy</div>
-            <div style="background-color: #ffc0cb; padding: 20px; border-radius: 15px; color: white; font-size: 1.2em;">Girl</div>
-        </div>
         <button id="revealButton" onclick="revealGender()">Reveal the Gender!</button>
-        <div id="message">It's a Girl! 🎀</div>
+        <div id="message"></div>
     </div>
-
     <script>
         function revealGender() {
-    const revealButton = document.getElementById('revealButton');
-    if (!revealButton) return;
-    revealButton.style.display = 'none';
-    let countdown = 3;
-    const messageElement = document.getElementById('message');
-    messageElement.style.display = 'block';
-    messageElement.innerText = countdown;
-
-    const interval = setInterval(() => {
-        countdown--;
-        if (countdown === 0) {
-            document.body.style.background = '#ffc0cb';
-            document.body.style.color = '#ff6b6b';
-            document.body.style.fontFamily = 'Nunito', sans-serif;
-            document.body.innerHTML = `
-                <div style="text-align: center; padding: 50px;">
-                    <h1 style="font-size: 4em; margin-bottom: 20px;">It's a Girl! 🎀</h1>
-                    <p style="font-size: 1.5em;">We are so excited to welcome a little princess!</p>
-                    <img src="https://cdn.pixabay.com/photo/2016/10/25/12/28/pink-1768927_1280.jpg" alt="It's a Girl" style="max-width: 300px; margin-top: 20px; border-radius: 15px;">
-                </div>
-            `;
-            clearInterval(interval);
-            messageElement.innerText = "It's a Girl! 🎀";
-            confetti({
-                particleCount: 200,
-                spread: 70,
-                origin: { y: 0.6 },
-                colors: ['#ff6b6b', '#ffc0cb']
-            });
-        } else {
-            messageElement.innerText = countdown;
-        }
-    }, 1000);
-}
             const revealButton = document.getElementById('revealButton');
-    if (!revealButton) return;
-    revealButton.style.display = 'none';
-            document.getElementById('message').style.display = 'block';
-            confetti({
-                particleCount: 200,
-                spread: 70,
-                origin: { y: 0.6 },
-                colors: ['#ff6b6b', '#ffc0cb']
-            });
+            revealButton.style.display = 'none';
+
+            let countdown = 3;
+            const messageElement = document.getElementById('message');
+            messageElement.style.display = 'block';
+            messageElement.innerText = countdown;
+
+            const interval = setInterval(() => {
+                countdown--;
+                if (countdown === 0) {
+                    clearInterval(interval);
+                    document.body.style.background = '#ffc0cb';
+                    document.body.innerHTML = `
+                        <div style="text-align: center; padding: 50px; background-color: #ffe4e9;">
+                            <h1 style="font-size: 4em; margin-bottom: 20px; color: #d63384;">It's a Girl! 🎀</h1>
+                            <p style="font-size: 1.5em; color: #d63384;">We are so excited to welcome a little princess!</p>
+                            <img src="https://cdn.pixabay.com/photo/2016/10/25/12/28/pink-1768927_1280.jpg" alt="It's a Girl" style="max-width: 300px; margin-top: 20px; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+                        </div>
+                    `;
+                    confetti({
+                        particleCount: 200,
+                        spread: 70,
+                        origin: { y: 0.6 },
+                        colors: ['#ff6b6b', '#ffc0cb']
+                    });
+                } else {
+                    messageElement.innerText = countdown;
+                }
+            }, 1000);
         }
     </script>
 </body>
