--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
         <div id="message"></div>
     </div>
     <script>
+        let prankDone = false;
+
         function revealGender() {
             const revealButton = document.getElementById('revealButton');
             revealButton.style.display = 'none';
@@ -96,19 +98,29 @@
                 countdown--;
                 if (countdown === 0) {
                     clearInterval(interval);
-                    document.body.style.background = '#ffc0cb';
-                    document.body.innerHTML = `
-                        <div style="text-align: center; padding: 50px; background-color: #ffe4e9;">
-                            <h1 style="font-size: 4em; margin-bottom: 20px; color: #d63384;">It's a Girl! 🎀</h1>
-                            <p style="font-size: 1.5em; color: #d63384;">We are thrilled to welcome a little princess!</p>
-                        </div>
-                    `;
-                    confetti({
-                        particleCount: 300,
-                        spread: 100,
-                        origin: { y: 0.6 },
-                        colors: ['#ff6b6b', '#ffc0cb']
-                    });
+
+                    if (!prankDone) {
+                        messageElement.innerText = "It's a baby! 👶";
+                        setTimeout(() => {
+                            messageElement.innerText = "Just kidding! Click again to really reveal.";
+                            revealButton.style.display = 'block';
+                            prankDone = true;
+                        }, 2000);
+                    } else {
+                        document.body.style.background = '#ffc0cb';
+                        document.body.innerHTML = `
+                            <div style="text-align: center; padding: 50px; background-color: #ffe4e9;">
+                                <h1 style="font-size: 4em; margin-bottom: 20px; color: #d63384;">It's a Girl! 🎀</h1>
+                                <p style="font-size: 1.5em; color: #d63384;">We are thrilled to welcome a little princess!</p>
+                            </div>
+                        `;
+                        confetti({
+                            particleCount: 300,
+                            spread: 100,
+                            origin: { y: 0.6 },
+                            colors: ['#ff6b6b', '#ffc0cb']
+                        });
+                    }
                 } else {
                     messageElement.innerText = countdown;
                 }
