--- a/index.html
+++ b/index.html
@@ -54,77 +54,55 @@
             color: #ff6b6b;
             font-weight: bold;
         }
-
-        .decoration {
-            position: absolute;
-            width: 100px;
-            height: 100px;
-            background-color: rgba(255, 192, 203, 0.5);
-            border-radius: 50%;
-            z-index: -1;
-            animation: float 5s ease-in-out infinite;
-        }
-
-        @keyframes float {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
-        }
-
-        .circle1 { top: -40px; left: -40px; }
-        .circle2 { bottom: -40px; right: -40px; background-color: rgba(107, 168, 255, 0.5); }
     </style>
 </head>
 <body>
     <div id="revealContainer">
-        <div class="decoration circle1"></div>
-        <div class="decoration circle2"></div>
         <h1 style="color: #555; margin-bottom: 20px;">Boy or Girl?</h1>
         <button id="revealButton" onclick="revealGender()">Reveal the Gender!</button>
         <div id="message"></div>
     </div>
     <script>
-        let prankDone = false;
+        let prankStep = 0;
 
         function revealGender() {
             const revealButton = document.getElementById('revealButton');
             revealButton.style.display = 'none';
 
-            let countdown = 3;
             const messageElement = document.getElementById('message');
             messageElement.style.display = 'block';
-            messageElement.innerText = countdown;
 
-            const interval = setInterval(() => {
-                countdown--;
-                if (countdown === 0) {
-                    clearInterval(interval);
-
-                    if (!prankDone) {
-                        messageElement.innerText = "It's a baby! 👶";
-                        setTimeout(() => {
-                            messageElement.innerText = "Just kidding! Click again to really reveal.";
-                            revealButton.style.display = 'block';
-                            prankDone = true;
-                        }, 2000);
-                    } else {
-                        document.body.style.background = '#ffc0cb';
-                        document.body.innerHTML = `
-                            <div style="text-align: center; padding: 50px; background-color: #ffe4e9;">
-                                <h1 style="font-size: 4em; margin-bottom: 20px; color: #d63384;">It's a Girl! 🎀</h1>
-                                <p style="font-size: 1.5em; color: #d63384;">We are thrilled to welcome a little princess!</p>
-                            </div>
-                        `;
-                        confetti({
-                            particleCount: 300,
-                            spread: 100,
-                            origin: { y: 0.6 },
-                            colors: ['#ff6b6b', '#ffc0cb']
-                        });
-                    }
-                } else {
-                    messageElement.innerText = countdown;
-                }
-            }, 1000);
+            if (prankStep === 0) {
+                messageElement.innerText = "It's a baby! 👶";
+                setTimeout(() => {
+                    messageElement.innerText = "Just kidding! Here's the real deal...";
+                    revealButton.innerText = "Okay, seriously. Click again!";
+                    revealButton.style.display = 'block';
+                    prankStep++;
+                }, 2000);
+            } else if (prankStep === 1) {
+                messageElement.innerText = "Wait... Is it a boy or a girl? 🤔";
+                setTimeout(() => {
+                    messageElement.innerText = "Oh, I know! It's a... drumroll please...";
+                    revealButton.innerText = "Drumroll... click!";
+                    revealButton.style.display = 'block';
+                    prankStep++;
+                }, 2000);
+            } else {
+                document.body.style.background = '#ffc0cb';
+                document.body.innerHTML = `
+                    <div style="text-align: center; padding: 50px; background-color: #ffe4e9;">
+                        <h1 style="font-size: 4em; margin-bottom: 20px; color: #d63384;">It's a Girl! 🎀</h1>
+                        <p style="font-size: 1.5em; color: #d63384;">We are thrilled to welcome a little princess!</p>
+                    </div>
+                `;
+                confetti({
+                    particleCount: 300,
+                    spread: 100,
+                    origin: { y: 0.6 },
+                    colors: ['#ff6b6b', '#ffc0cb']
+                });
+            }
         }
     </script>
 </body>
