--- a/index.html
+++ b/index.html
@@ -63,8 +63,6 @@
         <div id="message"></div>
     </div>
     <script>
-        let prankStep = 0;
-
         function revealGender() {
             const revealButton = document.getElementById('revealButton');
             revealButton.style.display = 'none';
@@ -72,37 +70,36 @@
             const messageElement = document.getElementById('message');
             messageElement.style.display = 'block';
 
-            if (prankStep === 0) {
-                messageElement.innerText = "It's a baby! 👶";
-                setTimeout(() => {
-                    messageElement.innerText = "Just kidding! Here's the real deal...";
-                    revealButton.innerText = "Okay, seriously. Click again!";
-                    revealButton.style.display = 'block';
-                    prankStep++;
-                }, 2000);
-            } else if (prankStep === 1) {
-                messageElement.innerText = "Wait... Is it a boy or a girl? 🤔";
-                setTimeout(() => {
-                    messageElement.innerText = "Oh, I know! It's a... drumroll please...";
-                    revealButton.innerText = "Drumroll... click!";
-                    revealButton.style.display = 'block';
-                    prankStep++;
-                }, 2000);
-            } else {
-                document.body.style.background = '#ffc0cb';
-                document.body.innerHTML = `
-                    <div style="text-align: center; padding: 50px; background-color: #ffe4e9;">
-                        <h1 style="font-size: 4em; margin-bottom: 20px; color: #d63384;">It's a Girl! 🎀</h1>
-                        <p style="font-size: 1.5em; color: #d63384;">We are thrilled to welcome a little princess!</p>
-                    </div>
-                `;
-                confetti({
-                    particleCount: 300,
-                    spread: 100,
-                    origin: { y: 0.6 },
-                    colors: ['#ff6b6b', '#ffc0cb']
-                });
-            }
+            const pranks = [
+                "It's a baby! 👶 Just kidding!",
+                "Doesn't matter, it'll play football for sure! ⚽️",
+                "Error 404: Gender Not Found! 🚫"
+            ];
+
+            const randomPrank = pranks[Math.floor(Math.random() * pranks.length)];
+            messageElement.innerText = randomPrank;
+
+            setTimeout(() => {
+                messageElement.innerText = "Alright, here's the real deal...";
+                revealButton.innerText = "Click for the real reveal!";
+                revealButton.style.display = 'block';
+
+                revealButton.onclick = () => {
+                    document.body.style.background = '#ffc0cb';
+                    document.body.innerHTML = `
+                        <div style="text-align: center; padding: 50px; background-color: #ffe4e9;">
+                            <h1 style="font-size: 4em; margin-bottom: 20px; color: #d63384;">It's a Girl! 🎀</h1>
+                            <p style="font-size: 1.5em; color: #d63384;">We are thrilled to welcome a little princess!</p>
+                        </div>
+                    `;
+                    confetti({
+                        particleCount: 300,
+                        spread: 100,
+                        origin: { y: 0.6 },
+                        colors: ['#ff6b6b', '#ffc0cb']
+                    });
+                };
+            }, 2000);
         }
     </script>
 </body>
