--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             transition: background-color 0.3s;
             margin-top: 20px;
             box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         #revealButton:hover {
@@ -72,7 +75,7 @@
 
             const pranks = [
                 "It's a baby! 👶 Just kidding!",
-                "Doesn't matter, it'll play football for sure! ⚽️",
+                "Doesn't matter, it will play football for sure! ⚽️",
                 "Error 404: Gender Not Found! 🚫"
             ];
 
