--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
             const pranks = [
                 "It's a baby! 👶 Just kidding!",
-                "Doesn't matter, it will play football for sure! ⚽️",
+                "Doesn't matter, it'll play football for sure! ⚽️",
                 "Error 404: Gender Not Found! 🚫"
             ];
 
@@ -88,21 +88,32 @@
                 revealButton.style.display = 'block';
 
                 revealButton.onclick = () => {
-                    document.body.style.background = '#ffc0cb';
-                    document.body.innerHTML = `
-                        <div style="text-align: center; padding: 50px; background-color: #ffe4e9;">
-                            <h1 style="font-size: 4em; margin-bottom: 20px; color: #d63384;">It's a Girl! 🎀</h1>
-                            <p style="font-size: 1.5em; color: #d63384;">We are thrilled to welcome a little princess!</p>
-                        </div>
-                    `;
-                    confetti({
-                        particleCount: 300,
-                        spread: 100,
-                        origin: { y: 0.6 },
-                        colors: ['#ff6b6b', '#ffc0cb']
-                    });
+                    let countdown = 5;
+                    messageElement.innerText = `Revealing in ${countdown}...`;
+
+                    const countdownInterval = setInterval(() => {
+                        countdown--;
+                        messageElement.innerText = `Revealing in ${countdown}...`;
+
+                        if (countdown === 0) {
+                            clearInterval(countdownInterval);
+                            document.body.style.background = '#ffc0cb';
+                            document.body.innerHTML = `
+                                <div style="text-align: center; padding: 50px; background-color: #ffe4e9;">
+                                    <h1 style="font-size: 4em; margin-bottom: 20px; color: #d63384;">It's a Girl! 🎀</h1>
+                                    <p style="font-size: 1.5em; color: #d63384;">We are thrilled to welcome a little princess!</p>
+                                </div>
+                            `;
+                            confetti({
+                                particleCount: 300,
+                                spread: 100,
+                                origin: { y: 0.6 },
+                                colors: ['#ff6b6b', '#ffc0cb']
+                            });
+                        }
+                    }, 1000);
                 };
-            }, 2000);
+            }, 4000);
         }
     </script>
 </body>
