--- a/index.html
+++ b/index.html
@@ -114,14 +114,16 @@
                         }
                     }, 1000);
                 };
-            }, 2000);
+            }, 3000);
         }
 
         window.onload = () => {
-            const now = new Date();
+            const urlParams = new URLSearchParams(window.location.search);
+            const isAdmin = urlParams.get('admin') === 'true';
+            const now = new Date(new Date().toLocaleString('en-US', { timeZone: 'Europe/Brussels' }));
             const revealTime = new Date(now.getFullYear(), now.getMonth(), now.getDate(), 19, 30, 0);
 
-            if (now < revealTime) {
+            if (now < revealTime && !isAdmin) {
                 const countdownElement = document.createElement('div');
                 countdownElement.style.textAlign = 'center';
                 countdownElement.style.padding = '50px';
