--- a/index.html
+++ b/index.html
@@ -120,10 +120,13 @@
         window.onload = () => {
             const urlParams = new URLSearchParams(window.location.search);
             const isAdmin = urlParams.get('admin') === 'true';
-            const now = new Date(new Date().toLocaleString('en-US', { timeZone: 'Europe/Brussels' }));
+            const now = new Date();
+            const utcOffset = now.getTimezoneOffset();
+            const belgiumOffset = -60; // Belgium is UTC+1 normally
+            const adjustedNow = new Date(now.getTime() + (belgiumOffset - utcOffset) * 60 * 1000);
             const revealTime = new Date(now.getFullYear(), now.getMonth(), now.getDate(), 19, 30, 0);
 
-            if (now < revealTime && !isAdmin) {
+            if (adjustedNow < revealTime && !isAdmin) {
                 const countdownElement = document.createElement('div');
                 countdownElement.style.textAlign = 'center';
                 countdownElement.style.padding = '50px';
