--- a/index.html
+++ b/index.html
@@ -114,19 +114,19 @@
                         }
                     }, 1000);
                 };
-            }, 3000);
+            }, 2000);
         }
 
         window.onload = () => {
             const urlParams = new URLSearchParams(window.location.search);
             const isAdmin = urlParams.get('admin') === 'true';
-            const now = new Date();
+            const now = new Date(new Date().toLocaleString('en-US', { timeZone: 'Europe/Brussels' }));
             const utcOffset = now.getTimezoneOffset();
             const belgiumOffset = -60; // Belgium is UTC+1 normally
             const adjustedNow = new Date(now.getTime() + (belgiumOffset - utcOffset) * 60 * 1000);
             const revealTime = new Date(now.getFullYear(), now.getMonth(), now.getDate(), 19, 30, 0);
 
-            if (adjustedNow < revealTime && !isAdmin) {
+            if (now < revealTime && !isAdmin) {
                 const countdownElement = document.createElement('div');
                 countdownElement.style.textAlign = 'center';
                 countdownElement.style.padding = '50px';
