--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             const belgiumOffset = -60; // Belgium is UTC+1 normally
             const adjustedNow = new Date(now.getTime() + (belgiumOffset - utcOffset) * 60 * 1000);
             const revealTime = new Date(now.getFullYear(), now.getMonth(), now.getDate(), 19, 30, 0);
-
+console.log("Reveal:" + revealTime);
             if (now < revealTime && !isAdmin) {
                 const countdownElement = document.createElement('div');
                 countdownElement.style.textAlign = 'center';
