--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gender Reveal</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js">    window.onkeydown = (e) => {
+            if (e.key === 'F12' || (e.ctrlKey && e.shiftKey && (e.key === 'I' || e.key === 'J' || e.key === 'C'))) {
+                alert("Nice try! But no spoilers here! 😜");
+                e.preventDefault();
+            }
+        };
+    </script>
     <style>
         body {
             display: flex;
@@ -114,7 +120,7 @@
                         }
                     }, 1000);
                 };
-            }, 3000);
+            }, 2000);
         }
 
         window.onload = () => {
