--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             messageElement.style.display = 'block';
 
             const pranks = [
-                "It's a baby! 👶 Just kidding!",
+                "It's a baby! 👶</br> Just kidding...",
                 "Doesn't matter, it'll play football for sure! ⚽️",
                 "Error 404: Gender Not Found! 🚫"
             ];
